# data-feed

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
configs/dev/: config.yaml
configs/prod/: config.yaml
docker/clickhouse/: init-db.sql
docs/: SCHEMA_DESIGN.md
examples/: schema_usage.py
scripts/: run-linting.sh  run-tests.sh  setup.sh
sql/: 01_create_tables.sql  02_create_indexes.sql  03_create_materialized_views.sql  04_insert_reference_data.sql
src/nse_etl/: __init__.py  cli.py  config.py  logging.py  main.py
src/nse_etl/collectors/: __init__.py
src/nse_etl/monitoring/: __init__.py
src/nse_etl/processors/: __init__.py
src/nse_etl/storage/: __init__.py  benchmark.py  cli.py  models.py  schema_manager.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_logging.py  test_schema.py
